--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ default = ["console_error_panic_hook"]
 cursive_core = "0.3.4"
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
 js-sys = "0.3.59"
+serde={ version = "1.0", features = ["std","derive","unstable", "alloc"] }
+serde_json = "1.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
