--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,12 @@ authors = ["Hugo Josefson <hugo@josefson.org>"]
 categories = ["command-line-interface", "gui"]
 description = "WASM bindings for Cursive"
 edition = "2021"
-keywords = ["wasm", "webassembly", "TUI", "UI"]
+keywords = ["wasm", "webassembly", "TUI", "UI", "cursive"]
 license = "MIT"
 name = "cursive_wasm"
 readme = "README.md"
 repository = "https://github.com/hugojosefson/cursive_wasm"
-version = "0.0.1"
+version = "0.0.2"
 
 [lib]
 name = "cursive_wasm"
@@ -18,17 +18,18 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-cursive_core = "0.3.4"
-wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
-js-sys = "0.3.59"
-serde={ version = "1.0", features = ["std","derive","unstable", "alloc"] }
-serde_json = "1.0"
+cursive_core = "0.3.6"
+wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
+js-sys = "0.3.60"
+serde={ version = "1.0.151", features = ["std","derive","unstable", "alloc"] }
+serde_json = "1.0.91"
+getrandom = { version = "0.2.8", features = ["js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
-console_error_panic_hook = { version = "0.1.6", optional = true }
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
@@ -38,7 +39,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.13"
+wasm-bindgen-test = "0.3.33"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
