--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 cursive_core = "0.3.6"
-wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
+wasm-bindgen = { version = "0.2.83" }
 js-sys = "0.3.60"
-serde={ version = "1.0.151", features = ["std","derive","unstable", "alloc"] }
-serde_json = "1.0.91"
+serde={ version = "1.0.151", features = ["derive"] }
+serde-wasm-bindgen = "0.4.5"
 getrandom = { version = "0.2.8", features = ["js"] }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
